<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurtidoIntentImpl</string>
    <string name="action_settings">Settings</string>
    <string name="conociendo">Conociendo la EPS</string>
    <string name="ubicando">Localizacion</string>
    <string name="navegando">Acceso a la web</string>
    <string name="contactando">Tlf. de contacto: 973.702.700</string>
    <string name="Boton1">Por coord.</string>
    <string name="Boton2">Por direcc.</string>
    <string name="Boton3">Por URL</string>
    <string name="Boton4">Google</string>
    <string name="Boton5">Llamar</string>
    <string name="Boton6">Marcar</string>
    <string name="Boton7">Enviar SMS</string>
    <string name="Boton8">Enviar mail</string>
    <string name="Boton9">Acceder Contactos</string>
    <string name="Boton10">Acceder a la galeria</string>

    <string name="telef">666666666</string>
    <string name="textMsg">Hola!</string>
    <string name="mail">sss@gmail.com</string>
    <string name="textMiss">Hola!</string>
    <string name="demo">demo1</string>

    <string name="lat">41.60788</string>
    <string name="lon">0.623333</string>
    <string name="url">http://www.eps.udl.cat/ca/</string>
    <string name="direccion">Carrer de Jaume II, 69, Lleida</string>
    <string name="textoABuscar">escuela politecnica superior UdL</string>

    <string name="opcion1">Seleccionado Localizacion por coordenadas</string>
    <string name="opcion2">Seleccionado Localizacion por dirección</string>
    <string name="opcion3">Accediendo a la web</string>
    <string name="opcion4">Buscando en Google</string>
    <string name="opcion5">Llamando al Tlfn.</string>
    <string name="opcion6">Tlf. destino 6666666666</string>
    <string name="opcion7">Enviar SMS</string>
    <string name="opcion8">Email destino sss@gmail.es</string>
    <string name="opcion9">Accediendo a contactos</string>
    <string name="opcion10">Accediendo a la galeria</string>
    <string name="contacte">Contacte</string>


</resources>